<!--
  ~ Copyright (c) Konrad Kollnig 2015.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              xmlns:wheel="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center_horizontal"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              tools:context="com.mpg.app.views.SetupActivity">

    <!-- Login progress -->
    <!--<ProgressBar
        android:id="@+id/setup_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone"/>-->
    <com.pnikosis.materialishprogress.ProgressWheel
        android:id="@+id/setup_progress"
        android:layout_width="80dp"
        android:layout_height="80dp"
        wheel:matProg_barColor="@color/accent"
        wheel:matProg_progressIndeterminate="true"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/intro_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:text="@string/setup_intro"/>

            <EditText
                android:textColor="@color/text_secondary"
                android:id="@+id/setup_tag"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_tag"
                android:inputType="textVisiblePassword|textNoSuggestions"
                android:maxLines="1"
                android:nextFocusDown="@+id/password_old"
                android:singleLine="true"
                android:visibility="gone"/>

            <EditText
                android:textColor="@color/text_secondary"
                android:id="@+id/setup_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_form"
                android:inputType="textVisiblePassword|textNoSuggestions"
                android:maxLines="1"
                android:nextFocusDown="@+id/tag"
                android:singleLine="true"
                android:visibility="gone"/>

            <EditText
                android:textColor="@color/text_secondary"
                android:id="@+id/setup_password_old"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password_old"
                android:inputType="textPassword"
                android:maxLines="1"
                android:nextFocusDown="@+id/password_new"
                android:singleLine="true"
                android:visibility="gone"/>

            <EditText
                android:textColor="@color/text_secondary"
                android:id="@+id/setup_password_new"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password_new"
                android:inputType="textPassword"
                android:maxLines="1"
                android:nextFocusDown="@+id/password_repetition"
                android:singleLine="true"
                android:visibility="gone"/>

            <EditText
                android:textColor="@color/text_secondary"
                android:id="@+id/setup_password_repetition"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password_repetition"
                android:imeActionId="@integer/setupImeActionId"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="6dp"
                android:singleLine="false"
                android:text="@string/setup_instructions"
                android:textAlignment="center"
                android:textColor="#ff535353"/>

            <Button
                android:id="@+id/email_sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onClickComplete"
                android:text="@string/action_complete"
                android:textStyle="bold"/>

        </LinearLayout>
    </ScrollView>

</LinearLayout>